MyDemoOrg/force-app/main/default/objects/User/fields/BBCRM__Active__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuzzBoard access</label>
    <type>Checkbox</type>
</CustomField>