MyDemoOrg/force-app/main/default/objects/User/fields/BBCRM__BBPartnerkey__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BBPartnerkey__c</fullName>
    <label>BBPartnerkey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>