MyDemoOrg/force-app/main/default/objects/User/fields/BBCRM__BBPSet__c.field-meta.xml
<CustomField>
    <fullName>BBCRM__BBPSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BuzzBoard Permissions</label>
    <type>Checkbox</type>
</CustomField>